--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://harisudheer.github.io/Accordian",
+  "homepage": "https://harisudheer.github.io/project1",
   "name": "project1",
   "version": "0.1.0",
   "private": true,
